<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.HomeScreen"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivLanguage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_language" />

    <ImageView
        android:id="@+id/ivTwitter"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_twitter" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="40dp"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:textColor="#9C9C9C"
        android:layout_marginBottom="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvtopheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/disaster_management"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_m_a"
        android:layout_marginBottom="50dp"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="40sp"
        android:layout_above="@+id/btV" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btV"
        app:rippleColor="@color/white"
        app:strokeColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        app:cornerRadius="5dp"
        android:layout_above="@+id/btOrganization"
        android:text="@string/victim_volunteer"
        app:icon="@drawable/victim"
        app:iconSize="50dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/viewLine"
        android:layout_centerVertical="true" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btOrganization"
        app:rippleColor="@color/white"
        app:strokeColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/purple"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_below="@+id/viewLine"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:textAlignment="center"
        app:cornerRadius="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/i_represent_organization"
        app:icon="@drawable/team"
        app:iconSize="50dp" />

</RelativeLayout>