<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.Organization.OrganizationDashboard"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="40dp"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:textColor="#9C9C9C"
        android:layout_marginBottom="20dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvtopheader"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/i_represent_organization"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:visibility="invisible"
        android:id="@+id/ima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_m_a"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="#C0C0C0"
        android:textSize="25sp"
        android:layout_below="@+id/llTop" />

    <LinearLayout
        android:id="@+id/llLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_centerInParent="true">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btLive1"
            app:rippleColor="@color/white"
            app:strokeColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            app:icon="@drawable/ic_live_tracking"
            app:iconSize="70dp"
            app:iconGravity="textStart" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btFunds1"
            app:rippleColor="@color/white"
            app:strokeColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            app:cornerRadius="5dp"
            app:icon="@drawable/ic_raise_funds"
            app:iconSize="70dp"
            app:iconGravity="textStart" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="-10dp"
        android:layout_below="@+id/llLayout">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btLive"
            app:rippleColor="@color/white"
            app:strokeColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:cornerRadius="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/live_tracking" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/btFunds"
            app:rippleColor="@color/white"
            app:strokeColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:textAlignment="center"
            app:cornerRadius="5dp"
            android:text="@string/raise_funds" />

    </LinearLayout>


</RelativeLayout>