<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Organization.OrganizationAuthDetails"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authentication_details"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/name"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/topGuideline1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="1"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/motive"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tiName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="1"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/phone_number"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tiDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="1"
            android:maxLength="10"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiGST"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/gst_no"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tiPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btEnter"
        app:rippleColor="@color/white"
        app:strokeColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="5dp"
        android:text="@string/sign_in"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/startGuideline1"
        app:layout_constraintEnd_toEndOf="@id/endGuideline1"
        app:layout_constraintTop_toBottomOf="@id/tiGST" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>